# timetastic-mcp

./: .gitignore  LICENSE  README.md  main.py  package.json  pyproject.toml  server.py  timetastic.py
.github/workflows/: ci.yml  publish.yml
src/timetastic_mcp/: __init__.py  __main__.py  main.py  server.py
src/timetastic_mcp/tools/: absences.py  allowances.py  departments.py  holidays.py  leave_types.py  locked_dates.py  public_holidays.py  users.py  webhooks.py
tests/: test_holidays.py
tools/: __init__.py  absences.py  allowances.py  departments.py  holidays.py  leave_types.py  locked_dates.py  public_holidays.py  users.py  webhooks.py
