[project]
name = "timetastic-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# Tests import project modules (e.g. `tools.holidays`, `server`) by their
# top-level names, so the repo root must be importable.
pythonpath = ["."]
testpaths = ["tests"]
